fix(docs): bug mq on mobile

--- a/docs/assets/css/pages/home.css
+++ b/docs/assets/css/pages/home.css
@@ -183,7 +183,7 @@
 }
 
 @media (max-width: 768px) {
-    .choice-grid {
+    .choice-section__grid {
         grid-template-columns: 1fr;
     }
     .home-hero h1 {
